set(HEADERS attrdesc.h
        attribute.h
        attrmanip.h
        attrprop.h
        auto_tango_monitor.h
        basiccommand.h
        blackbox.h
        classattribute.h
        classpipe.h
        command.h
        pipe.h
        pipe.tpp
        coutappender.h
        coutbuf.h
        device.h
        device_2.h
        device_3.h
        device_4.h
        device_5.h
        deviceclass.h
        devintr.h
        dintrthread.h
        dserver.h
        dserverclass.h
        dserversignal.h
        eventsupplier.h
        except.h
        fwdattrdesc.h
        fwdattribute.h
        log4tango.h
        logcmds.h
        logging.h
        logstream.h
        multiattribute.h
        ntservice.h
        pipedesc.h
        pollcmds.h
        pollext.h
        pollobj.h
        pollring.h
        pollthread.h
        readers_writers_lock.h
        rootattreg.h
        seqvec.h
        tango.h
        tango_config.h
        tango_const.h
        tango_monitor.h
        tangoappender.h
        tangorollingfileappender.h
        utils.h
        utils.tpp
        w32win.h
        w_attribute.h
        w_pipe.h
        subdev_diag.h
        encoded_attribute.h
        encoded_format.h)

install(FILES ${HEADERS} DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/tango")