set(SERVER_HEADERS attrdesc.h
        attribute.h
        attrmanip.h
        attrprop.h
        auto_tango_monitor.h
        basiccommand.h
        blackbox.h
        classattribute.h
        classpipe.h
        command.h
        pipe.h
        pipe.tpp
        coutappender.h
        coutbuf.h
        device.h
        device_2.h
        device_3.h
        device_4.h
        device_5.h
        deviceclass.h
        devintr.h
        dintrthread.h
        dserver.h
        dserverclass.h
        dserversignal.h
        eventsupplier.h
        except.h
        fwdattrdesc.h
        fwdattribute.h
        log4tango.h
        logcmds.h
        logging.h
        logstream.h
        multiattribute.h
        ntservice.h
        pipedesc.h
        pollcmds.h
        pollext.h
        pollobj.h
        pollring.h
        pollthread.h
        readers_writers_lock.h
        rootattreg.h
        seqvec.h
        tango.h
        tango_config.h
        tango_const.h
        tango_monitor.h
        tangoappender.h
        tangorollingfileappender.h
        utils.h
        w32win.h
        w_attribute.h
        w_pipe.h
        subdev_diag.h
        encoded_attribute.h
        encoded_format.h)


set(SERVER_TEMPLATES
        attribute.tpp
        attrsetval.tpp
        attribute_spec.tpp
        attrprop.tpp
        utils.tpp
        pipe.tpp
        device_3.tpp
        fwdattribute.tpp
        fwdattribute_spec.tpp
        pollext.tpp
        pollring.tpp
        pollthread.tpp
        utils.tpp
        utils_spec.tpp
        w_attribute.tpp
        w_attrsetval.tpp
        w_attribute_spec.tpp
        w_pipe.tpp)

set(CLIENT_HEADERS
        accessproxy.h
        apiexcept.h
        cbthread.h
        dbapi.h
        devapi.h
        devasyn.h
        event.h
        eventconsumer.h
        filedatabase.h
        group.h
        lockthread.h
        Database.h
        DbDevice.h
        ApiUtil.h
        DeviceData.h
        DeviceAttribute.h
        DevicePipe.h
        Connection.h
        DeviceProxy.h
        AttributeProxy.h)

set(CLIENT_TEMPLATES event.tpp
        devapi_attr.tpp
        devapi_utils.tpp
        api_util.tpp
        devapi_pipe.tpp)

add_library(include_objects OBJECT ${SERVER_HEADERS} ${CLIENT_HEADERS})
install(FILES ${SERVER_HEADERS} ${CLIENT_HEADERS} DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/tango")